--- a/project.css
+++ b/project.css
@@ -7,7 +7,7 @@ body{
 }
 canvas{
     position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%,-50%);
+    right: 0%;
+    /* top: 50%; */
+    /* transform: translate(-50%,-50%); */
 }
